Added success response messages and refactored controller methods for tracking operations

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,10 +1,35 @@
 #  					SUCCESS MESSAGES
 #------------------------------------------------------------------
+### User Service ###
 OTP.SENT= OTP sent successfully to email : 
 USER.DATA.UPDATED= User data updated successfully.
 USER.LOGGEDIN = User logged in successfully.
 USER.DATA.RETRIEVED = User data retrieved successfully.
 NEW.TOKEN.GENERATED = New token generated successfully.
+
+### Track Service ###
+CATEGORY.ADD.SUCCESS = Category added successfully.
+HASH.TAG.ADD.SUCCESS = Hashtag added successfully.
+TRANSACTION.ADD.SUCCESS = Transaction added successfully.
+LOAN.REPAYMENT.ADD.SUCCESS = Loan repayment details added successfully.
+
+CATEGORY.FETCH.SUCCESS = Categories fetched successfully.
+TRANSACTION.FETCH.SUCCESS = Transaction fetched successfully.
+RECENT.TRANSACTIONS.FETCH.SUCCESS = Recent transactions fetched successfully.
+TRANSACTIONS.FETCH.SUCCESS = Transactions fetched successfully.
+TRANSACTION.FILTERS.FETCH.SUCCESS = Transaction filters fetched successfully.
+HASHTAGS.FETCH.SUCCESS = Hashtags fetched successfully.
+
+CATEGORY.UPDATE.SUCCESS = Category updated successfully.
+TRANSACTION.UPDATE.SUCCESS = Transaction updated successfully.
+LOAN.REPAYMENT.UPDATE.SUCCESS = Loan repayment details updated successfully.
+
+CATEGORY.DELETE.SUCCESS = Category deleted successfully.
+TRANSACTION.DELETE.SUCCESS = Transaction deleted successfully.
+HASH.TAG.DELETE.SUCCESS = Hashtag removed successfully.
+
+
+
 
 #  					ERROR MESSAGES
 #-------------------------------------------------------------------
